dnl $Id: configure.in,v 1.3 1999/11/26 18:29:40 graydon Exp $
dnl
dnl This source file is a part of the Berlin Project.
dnl Copyright (C) 1999 Stefan Seefeld <seefelds@magellan.umontreal.ca> 
dnl http://www.berlin-consortium.org
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_CONFIG_HEADER(../include/Warsaw/config.hh)

dnl Required to determine host CPU and OS in BERLIN_OMNIORB_HOOK
AC_CANONICAL_SYSTEM

dnl check for programs
AC_PROG_MAKE_SET
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_CC
AC_PROG_CXX
AC_CHECK_PROG(AR, ar, ar)
AC_CHECK_PROG(LD, ld, ld)

dnl make sure we get the correct libraries linked in...
if GXX==yes; then CXX=g++
fi

AC_PROG_RANLIB
AC_PROG_INSTALL

dnl make sure we have pthreads installed somewhere
dnl AC_CHECK_HEADER(pthread.h, 
dnl AC_CHECK_LIB(pthread, pthread_create, 
dnl AC_DEFINE(HAVE_PTHREADS) 
dnl LIBS="$LIBS -lpthread",),)

dnl which ORB to use
dnl this should become a macro...
dnl OK :)
BERLIN_OMNIORB_CHECK
ORB=omniORB2
IDL=$OMNIIDL
IDLFLAGS=""
LCIDLFLAGS="-l"
DYNIDLFLAGS="-a"

dnl What is this?
ORBFLAGS="__OMNIORB2__"

AC_SUBST(ORB)
AC_SUBST(IDL)
AC_SUBST(IDLFLAGS)
AC_SUBST(LCIDLFLAGS)
AC_SUBST(DYNIDLFLAGS)
AC_DEFINE(ORBFLAGS)
AC_SUBST(ORBFLAGS)
AC_SUBST(ORBCPPFLAGS)
AC_SUBST(ORBLIBS)

BERLIN_GGIMESA_CHECK

AC_OUTPUT(local.mk:local.mk.in)
