dnl $Id: configure.in,v 1.7 2001/02/26 04:45:36 stefan Exp $
dnl
dnl This source file is a part of the Berlin Project.
dnl Copyright (C) 2000 Håvard Skinnemoen <skinnemo@itk.ntnu.no>
dnl Copyright (C) 2000 Stefan Seefeld <stefan@berlin-consortium.org> 
dnl http://www.berlin-consortium.org/
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.

dnl ------------------------------------------------------------------
dnl Autoconf initialization
dnl ------------------------------------------------------------------
AC_PREREQ(2.12)
AC_REVISION($Revision: 1.7 $)

AC_INIT(subdirs.mk.in)
AC_VERSION(0, 2, 2, 0, 0)
AC_SET_PATHS(../..)

AC_DIVERT_PUSH(AC_DIVERSION_INIT)dnl
AC_CONFIG_AUX_DIR(config)
AC_DIVERT_POP()

AC_HEADLINE(dnl
Berlin Docs, Berlin Documentation, dnl
[Copyright (c) 2000 The Berlin Project <berlin-design@lists.sourceforge.net>],
VERSION)

dnl ------------------------------------------------------------------
dnl Decisions
dnl ------------------------------------------------------------------

dnl Decide whether we are ready to build
dnl AC_ARG_WITH(synopsis-prefix, [  --with-synopsis-prefix  Prefix for synopsis],[ synopsis_prefix="$withval"])
dnl AC_PATH_PROG(SYNOPSIS, synopsis)
AC_SYNOPSIS
if test ".$SYNOPSIS" != . ; then
	enable_manuals=yes
dnl AC_PACKAGE(Prague, $VERSION)
dnl AC_PACKAGE(Warsaw, $VERSION)
	MANUALS="Prague Babylon Warsaw Berlin"
fi
TUTORIALS="Berlin"
AC_SUBST(MANUALS)
AC_SUBST(TUTORIALS)

dnl ------------------------------------------------------------------
dnl Print a summary of what's going to be built
dnl ------------------------------------------------------------------
AC_MSG_PART(Summary)
AC_MSG_RESULT([Configure RefManuals:          $enable_manuals])
AC_MSG_RESULT([Configure Tutorials:           yes])

dnl ------------------------------------------------------------------
dnl Output substitution
dnl ------------------------------------------------------------------
AC_MSG_PART(Output Substitution)

mkdir -p $builddir/doc/RefManual
mkdir -p $builddir/doc/Tutorial
mkdir -p $builddir/doc/Tutorial/Berlin/figures

manuals=
for manual in $MANUALS ; do
	mkdir -p $builddir/doc/RefManual/$manual
	manuals="$manuals $builddir/doc/RefManual/$manual/Makefile:doc/RefManual/$manual/Makefile.in"
done
AC_OUTPUT([
dnl	$builddir/config/Docs/subdirs.mk:config/Docs/subdirs.mk.in
	$builddir/config/Docs/local.mk:config/Docs/local.mk.in
	$builddir/doc/Makefile:doc/Makefile.in
	$builddir/doc/RefManual/Makefile:doc/RefManual/Makefile.in
	$builddir/doc/Tutorial/Makefile:doc/Tutorial/Makefile.in
	$manuals
	$builddir/doc/Tutorial/Berlin/Makefile:doc/Tutorial/Berlin/Makefile.in
])
