dnl $Id: configure.in,v 1.9 2001/04/09 01:51:56 stefan Exp $
dnl
dnl This source file is a part of the Berlin Project.
dnl Copyright (C) Håvard Skinnemoen <skinnemo@itk.ntnu.no>
dnl Copyright (C) 2000 Stefan Seefeld <stefan@berlin-consortium.org> 
dnl http://www.berlin-consortium.org/
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.

dnl ------------------------------------------------------------------
dnl Autoconf initialization
dnl ------------------------------------------------------------------
AC_PREREQ(2.12)
AC_REVISION($Revision: 1.9 $)

AC_INIT(subdirs.mk.in)
AC_VERSION(0, 2, 2, 0, 0)
AC_SET_PATHS(../..)
AC_CONFIG_HEADER($builddir/include/Warsaw/config.hh:config/Warsaw/config.hh.in)

AC_DIVERT_PUSH(AC_DIVERSION_INIT)dnl
AC_CONFIG_AUX_DIR(config)
AC_DIVERT_POP()

AC_HEADLINE(dnl
Warsaw, The Berlin Protocol, dnl
[Copyright (c) 2000 The Berlin Project <berlin-design@lists.sourceforge.net>],
VERSION)

AC_PROG_MAKE_SET

dnl ------------------------------------------------------------------

BERLIN_LIB_ORB(mandatory)
MAKEFILE=
if test ".$ORB" = .omniORB ; then
	MAKEFILE="Makefile.omniorb.in"
fi

dnl ------------------------------------------------------------------
dnl Output substitution
dnl ------------------------------------------------------------------
AC_MSG_PART(Output Substitution)

mkdir -p $builddir/bin
mkdir -p $builddir/lib
mkdir -p $builddir/config/Warsaw
mkdir -p $builddir/include/Warsaw
mkdir -p $builddir/src/Warsaw

AC_OUTPUT([
	$builddir/bin/Warsaw-config:config/package-config.in
	$builddir/config/Warsaw/subdirs.mk:config/Warsaw/subdirs.mk.in
	$builddir/src/Warsaw/Makefile:config/Warsaw/$MAKEFILE
],[
	chmod +x $builddir/bin/Warsaw-config
],[
	builddir=$builddir
])
