dnl $Id: configure.in,v 1.3 1999/11/12 16:43:22 stefan Exp $
dnl
dnl This source file is a part of the Berlin Project.
dnl Copyright (C) 1999 Stefan Seefeld <seefelds@magellan.umontreal.ca> 
dnl http://www.berlin-consortium.org
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the
dnl Free Software Foundation, Inc., 675 Mass Ave, Cambridge,
dnl MA 02139, USA.
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AC_CONFIG_HEADER(../../../include/Prague/Sys/config.hh)
dnl check for programs
AC_PROG_MAKE_SET
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_CC
AC_PROG_CXX
AC_CHECK_PROG(AR, ar, ar)
AC_CHECK_PROG(LD, ld, ld)
AC_CHECK_PROG(MAKEINFO, makeinfo, makeinfo)
AC_CHECK_PROG(TEXI2DVI, texi2dvi, texi2dvi)
AC_CHECK_PROG(TEXI2HTML, texi2html, texi2html)
AC_CHECK_PROG(TEX, latex, latex)
AC_CHECK_PROG(DVIPS, dvips, dvips)

dnl make sure we get the correct libraries linked in...
if GXX==yes; then CXX=g++
fi

AC_PROG_RANLIB
AC_PROG_INSTALL

dnl
dnl Find types
dnl 
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_TYPE_GETGROUPS
AC_TYPE_SIGNAL

dnl AC_TYPE_SIG_HANDLER_ARGS
dnl
dnl Find libraries and functions
dnl 
AC_CHECK_FUNC(getpgrp)
AC_CHECK_FUNC(setpgrp)
AC_FUNC_GETPGRP
AC_FUNC_SETPGRP
AC_LANG_SAVE
AC_LANG_CPLUSPLUS

dnl
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h limits.h pwd.h stdlib.h termio.h termios.h)
AC_CHECK_HEADERS(sys/ioctl.h sys/param.h sys/time.h sys/resource.h sys/timeb.h)
AC_CHECK_HEADERS(sys/stat.h sys/stropts.h sys/vty.h sys/sysmacros.h)
AC_CHECK_HEADERS(sys/socket.h sys/termios.h sys/utsname.h sys/user.h)
AC_CHECK_HEADERS(fcntl.h string.h strings.h)
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_HEADER_DIRENT
AC_STAT_MACROS_BROKEN

dnl
AC_CHECK_FUNCS(asctime difftime dup2 endpwent fcntl ftime gethostname gethostbyname getrusage \
	       getwd getpty _getpty grantpt ioctl lstat memcpy memset popen pclose \
	       ptsname raise rand random readlink setbuf setpgrp setpgrp2 setpgid setpwent \
	       setsid setvbuf sigblock sigsetmask sigprocmask sigsuspend \
	       srand srandom stat strerror strftime strsignal strtol strtod \
	       tcgetattr tcsetattr tcgetsid tcgetpgrp tcsetpgrp times uname unlink \
	       unlockpt vfork waitpid)

AC_OUTPUT(../Makefile:Makefile.in)
